--- a/Diagnosis.App/Controls/Common/UndoOverlay.xaml
+++ b/Diagnosis.App/Controls/Common/UndoOverlay.xaml
@@ -4,17 +4,27 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             MinWidth="200" MaxWidth="300">
-    <Border Background="{StaticResource overlayBackgroundBrush}" BorderBrush="{StaticResource overlayBorderBrush}" BorderThickness="3" CornerRadius="10" >
+             MinWidth="200"
+             MaxWidth="300">
+    <Border Background="{StaticResource overlayBackgroundBrush}"
+            BorderBrush="{StaticResource overlayBorderBrush}"
+            BorderThickness="3"
+            CornerRadius="10">
         <DockPanel Margin="5">
-            <TextBlock TextWrapping="Wrap" Margin="0,0,30,0">
+            <TextBlock TextWrapping="Wrap"
+                       Margin="0,0,30,0">
                 <Run Text="{Binding Message, Mode=OneWay}" />.
                 <Hyperlink Command="{Binding UndoCommand}">Отменить?</Hyperlink>
             </TextBlock>
             <Button Command="{Binding CloseCommand}"
-                    Width="16" Height="16"
-                    HorizontalAlignment="Right" VerticalAlignment="Top">
-                <Path Data="{StaticResource CloseX}" Stretch="Uniform" Stroke="Black" Margin="1" />
+                    Width="16"
+                    Height="16"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top">
+                <Path Data="{StaticResource CloseX}"
+                      Stretch="Uniform"
+                      Stroke="Black"
+                      Margin="1" />
             </Button>
         </DockPanel>
     </Border>
