--- a/Diagnosis.App/Controls/CardParts/Appointment.xaml
+++ b/Diagnosis.App/Controls/CardParts/Appointment.xaml
@@ -4,13 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <!-- ShortAppointmentViewModel or AppointmentViewModel-->
     <DockPanel MinWidth="70">
         <TextBlock Text="{Binding DateTime, Converter={StaticResource DateLabel}}"
-                                       DockPanel.Dock="Top" />
+                   DockPanel.Dock="Top" />
         <TextBlock Text="{Binding Doctor, Converter={StaticResource ManToShortName}, StringFormat='{}доктор {0}'}"
-                                       HorizontalAlignment="Right"
-                                       Visibility="{Binding IsDoctorFromCourse, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
+                   HorizontalAlignment="Right"
+                   Visibility="{Binding IsDoctorFromCourse, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
     </DockPanel>
 </UserControl>
