--- a/Diagnosis.App/Controls/CardParts/AppointmentsTabs.xaml
+++ b/Diagnosis.App/Controls/CardParts/AppointmentsTabs.xaml
@@ -7,7 +7,8 @@
              xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:screen="clr-namespace:Diagnosis.App.Screens"
              mc:Ignorable="d"
-             d:DesignHeight="50" d:DesignWidth="300">
+             d:DesignHeight="50"
+             d:DesignWidth="300">
     <!--DataContext is CourseViewModel-->
     <UserControl.Resources>
         <DataTemplate x:Key="AppointmentHeaderTemplate">
@@ -18,12 +19,13 @@
             <TextBlock ToolTip="Начать новый осмотр">+ осмотр</TextBlock>
         </DataTemplate>
         <card:SpecialCaseDataTemplateSelector x:Key="addNewSelector"
-                                         DefaultTemplate="{StaticResource AppointmentHeaderTemplate}"
-                                         AddNewTemplate="{StaticResource NewAppointmentTemplate}" />
+                                              DefaultTemplate="{StaticResource AppointmentHeaderTemplate}"
+                                              AddNewTemplate="{StaticResource NewAppointmentTemplate}" />
     </UserControl.Resources>
 
     <Grid>
-        <TabControl x:Name="appointments" Grid.Row="1"
+        <TabControl x:Name="appointments"
+                    Grid.Row="1"
                     SelectedItem="{Binding SelectedAppointment, Mode=TwoWay}"
                     ItemsSource="{Binding Appointments}"
                     ItemTemplateSelector="{StaticResource addNewSelector}">
