--- a/Diagnosis.App/Controls/CardParts/CardItem.xaml
+++ b/Diagnosis.App/Controls/CardParts/CardItem.xaml
@@ -3,35 +3,43 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:headers="clr-namespace:Diagnosis.App.Controls.Headers"
              mc:Ignorable="d"
              Tag="{Binding HolderVm}"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <UserControl.Style>
         <Style TargetType="UserControl">
-            <Setter Property="Width" Value="200" />
+            <Setter Property="Width"
+                    Value="200" />
         </Style>
     </UserControl.Style>
 
     <UserControl.ContextMenu>
         <ContextMenu DataContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Редактировать" InputGestureText="F2" Command="{Binding EditCommand}" />
-            <MenuItem Header="Добавить курс" Command="{Binding StartCourseCommand}" />
-            <MenuItem Header="Добавить осмотр" Command="{Binding AddAppointmentCommand}" />
-            <MenuItem Header="Открыть" Command="{Binding OpenCommand}" />
-            <MenuItem Header="Удалить" InputGestureText="Del" Command="{Binding DeleteCommand}" />
+            <MenuItem Header="Редактировать"
+                      InputGestureText="F2"
+                      Command="{Binding EditCommand}" />
+            <MenuItem Header="Добавить курс"
+                      Command="{Binding StartCourseCommand}" />
+            <MenuItem Header="Добавить осмотр"
+                      Command="{Binding AddAppointmentCommand}" />
+            <MenuItem Header="Открыть"
+                      Command="{Binding OpenCommand}" />
+            <MenuItem Header="Удалить"
+                      InputGestureText="Del"
+                      Command="{Binding DeleteCommand}" />
         </ContextMenu>
     </UserControl.ContextMenu>
 
     <UserControl.Resources>
-
     </UserControl.Resources>
 
     <Grid>
-        <headers:Holder DataContext="{Binding Holder}" 
+        <headers:Holder DataContext="{Binding Holder}"
                         TimeVisibility="{Binding DataContext.ShowAppTime, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
     </Grid>
 </UserControl>
