--- a/Diagnosis.App/Controls/CardParts/Course.xaml
+++ b/Diagnosis.App/Controls/CardParts/Course.xaml
@@ -4,18 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <!-- ShortCourseViewModel-->
     <StackPanel x:Name="description">
         <TextBlock>
                     <Run>
                          <MultiBinding Converter="{StaticResource DateIntervalLabel}">
-                            <Binding Path="Start" Mode="OneWay" />
-                            <Binding Path="End" Mode="OneWay" />
+                            <Binding Path="Start"
+                                     Mode="OneWay" />
+                            <Binding Path="End"
+                                     Mode="OneWay" />
                         </MultiBinding>
                     </Run>
         </TextBlock>
         <TextBlock Text="{Binding LeadDoctor, Converter={StaticResource ManToShortName}, StringFormat='{}доктор {0}'}"
-                           Visibility="{Binding IsDoctorCurrent,Converter={StaticResource NegBooleanToVisibilityConverter}}" />
+                   Visibility="{Binding IsDoctorCurrent,Converter={StaticResource NegBooleanToVisibilityConverter}}" />
     </StackPanel>
 </UserControl>
