--- a/Diagnosis.App/Controls/CardParts/PatientHeader.xaml
+++ b/Diagnosis.App/Controls/CardParts/PatientHeader.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              x:Name="header"
-             d:DesignHeight="30" d:DesignWidth="300">
+             d:DesignHeight="30"
+             d:DesignWidth="300">
     <!--PatientViewModel-->
     <Grid Background="Transparent">
         <Grid.RowDefinitions>
@@ -37,32 +38,40 @@
                        Visibility="{Binding NoName, Converter={StaticResource NegBooleanToVisibilityConverter}}"
                        MinWidth="100" />
             <TextBlock Text="{Binding IsMale, Converter={StaticResource SexToSign}}"
-                   FontSize="20"
-                   Margin="20,0,5,0"
-                   VerticalAlignment="Center" />
+                       FontSize="20"
+                       Margin="20,0,5,0"
+                       VerticalAlignment="Center" />
             <TextBlock Margin="5,0,10,0"
-                   VerticalAlignment="Center">
+                       VerticalAlignment="Center">
                 <TextBlock Text="{Binding Age}" />
                 <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" />
             </TextBlock>
         </DockPanel>
 
-        <Button Height="26"  Width="26"
-                    Command="{Binding EditCommand}"
-                    ToolTip="Редактировать данные пациента" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.RowSpan="2">
+        <Button Height="26"
+                Width="26"
+                Command="{Binding EditCommand}"
+                ToolTip="Редактировать данные пациента"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Grid.RowSpan="2">
             <Button.Style>
                 <Style>
-                    <Setter Property="Button.Visibility" Value="Collapsed"></Setter>
+                    <Setter Property="Button.Visibility"
+                            Value="Collapsed"></Setter>
 
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding ElementName=header, Path=IsMouseOver}" Value="true">
-                            <Setter Property="Button.Visibility" Value="Visible"></Setter>
+                        <DataTrigger Binding="{Binding ElementName=header, Path=IsMouseOver}"
+                                     Value="true">
+                            <Setter Property="Button.Visibility"
+                                    Value="Visible"></Setter>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </Button.Style>
             <DockPanel>
-                <Image Source="{StaticResource editImage}" Height="16" />
+                <Image Source="{StaticResource editImage}"
+                       Height="16" />
             </DockPanel>
         </Button>
     </Grid>
