--- a/Diagnosis.App/Controls/Common/CommaList.xaml
+++ b/Diagnosis.App/Controls/Common/CommaList.xaml
@@ -1,12 +1,14 @@
 ﻿<UserControl x:Class="Diagnosis.App.Controls.CommaList"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              mc:Ignorable="d"
-              x:Name="commaList"
-              d:DesignHeight="20" d:DesignWidth="300">
-    <ItemsControl ItemsSource="{Binding ItemsSource, ElementName=commaList}" Focusable="False">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             x:Name="commaList"
+             d:DesignHeight="20"
+             d:DesignWidth="300">
+    <ItemsControl ItemsSource="{Binding ItemsSource, ElementName=commaList}"
+                  Focusable="False">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
                 <WrapPanel />
@@ -14,22 +16,29 @@
         </ItemsControl.ItemsPanel>
         <ItemsControl.ItemTemplate>
             <DataTemplate>
-                <StackPanel Orientation="Horizontal" x:Name="item">
-                    <ContentPresenter Content="{Binding}" ContentTemplate="{Binding ItemTemplate, ElementName=commaList}" />
-                    <ContentPresenter x:Name="separator" Content="{Binding Separator, ElementName=commaList}">
+                <StackPanel Orientation="Horizontal"
+                            x:Name="item">
+                    <ContentPresenter Content="{Binding}"
+                                      ContentTemplate="{Binding ItemTemplate, ElementName=commaList}" />
+                    <ContentPresenter x:Name="separator"
+                                      Content="{Binding Separator, ElementName=commaList}">
                         <ContentPresenter.Style>
                             <Style TargetType="ContentPresenter">
-                                <Setter Property="Visibility" Value="Visible" />
+                                <Setter Property="Visibility"
+                                        Value="Visible" />
 
                                 <Style.Triggers>
                                     <DataTrigger Value="True">
                                         <DataTrigger.Binding>
                                             <MultiBinding Converter="{StaticResource IsLastItem}">
-                                                <Binding Path="DataContext" ElementName="item"  />
-                                                <Binding Path="ItemsSource" ElementName="commaList" />
+                                                <Binding Path="DataContext"
+                                                         ElementName="item" />
+                                                <Binding Path="ItemsSource"
+                                                         ElementName="commaList" />
                                             </MultiBinding>
                                         </DataTrigger.Binding>
-                                        <Setter Property="Visibility" Value="Collapsed" />
+                                        <Setter Property="Visibility"
+                                                Value="Collapsed" />
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
