--- a/Diagnosis.App/Controls/Editors/AgePicker.xaml
+++ b/Diagnosis.App/Controls/Editors/AgePicker.xaml
@@ -6,7 +6,7 @@
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:conv="clr-namespace:Diagnosis.App.Converters"
-             xmlns:sys="clr-namespace:System;assembly=mscorlib"             
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d"
              x:Name="agePicker"
              d:DesignWidth="290"
@@ -15,16 +15,20 @@
         <sys:Double x:Key="minOneRowWidth">230</sys:Double>
     </UserControl.Resources>
     <WrapPanel>
-        <editors:ComboBoxDatePicker x:Name="comboDatePicker" VerticalAlignment="Top" 
+        <editors:ComboBoxDatePicker x:Name="comboDatePicker"
+                                    VerticalAlignment="Top"
                                     Year="{Binding BirthYear, Mode=TwoWay}"
                                     Month="{Binding BirthMonth, Mode=TwoWay}"
                                     Day="{Binding BirthDay, Mode=TwoWay}">
             <editors:ComboBoxDatePicker.Style>
                 <Style TargetType="FrameworkElement">
-                    <Setter Property="Margin" Value="0,0,30,5"/>
+                    <Setter Property="Margin"
+                            Value="0,0,30,5" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding ActualWidth, ElementName=agePicker, Converter={StaticResource LessThan}, ConverterParameter={StaticResource minOneRowWidth}}" Value="True" >
-                            <Setter Property="Margin" Value="0,0,0,5"/>
+                        <DataTrigger Binding="{Binding ActualWidth, ElementName=agePicker, Converter={StaticResource LessThan}, ConverterParameter={StaticResource minOneRowWidth}}"
+                                     Value="True">
+                            <Setter Property="Margin"
+                                    Value="0,0,0,5" />
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
@@ -33,15 +37,18 @@
 
         <DockPanel VerticalAlignment="Top">
             <TextBox Text="{Binding Age, Mode=TwoWay, ValidatesOnDataErrors=True, TargetNullValue=''}"
-                     Width="50"                    
+                     Width="50"
                      HorizontalContentAlignment="Right"
                      IsTabStop="False">
                 <controls:WatermarkService.Watermark>
-                    <TextBlock Style="{StaticResource watermark}" Margin="5,0,0,0">Возраст</TextBlock>
+                    <TextBlock Style="{StaticResource watermark}"
+                               Margin="5,0,0,0">Возраст</TextBlock>
                 </controls:WatermarkService.Watermark>
             </TextBox>
 
-            <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" Margin="3,0,0,0" VerticalAlignment="Center"></TextBlock>
+            <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}"
+                       Margin="3,0,0,0"
+                       VerticalAlignment="Center"></TextBlock>
         </DockPanel>
     </WrapPanel>
 </UserControl>
