--- a/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
+++ b/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
@@ -14,8 +14,11 @@
     </UserControl.Resources>
     <StackPanel Orientation="Horizontal">
         <StackPanel.Resources>
-            <Style x:Key="comboRight" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource {x:Type ComboBox}}">
-                <Setter Property="Margin" Value="0,0,5,0" />
+            <Style x:Key="comboRight"
+                   TargetType="{x:Type ComboBox}"
+                   BasedOn="{StaticResource {x:Type ComboBox}}">
+                <Setter Property="Margin"
+                        Value="0,0,5,0" />
             </Style>
         </StackPanel.Resources>
         <ComboBox x:Name="comboYears"
@@ -23,7 +26,7 @@
                   MinWidth="50"
                   IsEditable="True"
                   SelectionChanged="comboYears_SelectionChanged"
-                  LostFocus="comboYears_LostFocus"                  
+                  LostFocus="comboYears_LostFocus"
                   SelectedValue="{Binding Year, Mode=TwoWay, FallbackValue='', Converter={StaticResource IntToString}, ElementName=root}">
             <controls:WatermarkService.Watermark>
                 <TextBlock Style="{StaticResource watermark}"
