--- a/Diagnosis.App/Controls/Headers/Appointment.xaml
+++ b/Diagnosis.App/Controls/Headers/Appointment.xaml
@@ -4,10 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <!-- Appointment -->
     <DockPanel MinWidth="70">
         <TextBlock Text="{Binding DateAndTime, Converter={StaticResource DateLabel}}"
-                                       DockPanel.Dock="Top" />
+                   DockPanel.Dock="Top" />
     </DockPanel>
 </UserControl>
