--- a/Diagnosis.App/Controls/Headers/Patient.xaml
+++ b/Diagnosis.App/Controls/Headers/Patient.xaml
@@ -4,13 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <!--Patient-->
     <DockPanel>
         <TextBlock Text="{Binding Actual, Converter={StaticResource ManToShortName}}"
-                    VerticalAlignment="Center"
-                    Visibility="{Binding NoName, Converter={StaticResource NegBooleanToVisibilityConverter}}"
-                    MinWidth="30" />
+                   VerticalAlignment="Center"
+                   Visibility="{Binding NoName, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                   MinWidth="30" />
         <TextBlock Text="{Binding IsMale, Converter={StaticResource SexToSign}}"
                    FontSize="20"
                    Margin="20,0,5,0"
