--- a/Diagnosis.App/Controls/Search/Filter.xaml
+++ b/Diagnosis.App/Controls/Search/Filter.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
-             d:DesignHeight="100" d:DesignWidth="300">
+             d:DesignHeight="100"
+             d:DesignWidth="300">
     <!-- FilterViewModel -->
     <Grid>
         <Grid.ColumnDefinitions>
