--- a/Diagnosis.App/Screens/Doctors.xaml
+++ b/Diagnosis.App/Screens/Doctors.xaml
@@ -3,16 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
+             xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              x:Name="doctors"
              FocusManager.IsFocusScope="True"
-             d:DesignHeight="300" d:DesignWidth="400">
+             d:DesignHeight="300"
+             d:DesignWidth="400">
     <!--DoctorsListViewModel-->
-    <UserControl.Resources>        
-        <Style x:Key="CellStyle" TargetType="DataGridCell">
+    <UserControl.Resources>
+        <Style x:Key="CellStyle"
+               TargetType="DataGridCell">
             <Setter Property="BorderThickness"
                     Value="0" />
             <Setter Property="FocusVisualStyle"
@@ -32,13 +34,15 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-
     </UserControl.Resources>
 
-    <Grid HorizontalAlignment="Stretch" MaxWidth="500" MinWidth="300">
+    <Grid HorizontalAlignment="Stretch"
+          MaxWidth="500"
+          MinWidth="300">
         <Grid.RowDefinitions>
             <RowDefinition Height="36" />
-            <RowDefinition Height="auto" MinHeight="30" />
+            <RowDefinition Height="auto"
+                           MinHeight="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
