--- a/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
@@ -4,36 +4,49 @@
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
         xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
-        Title="{Binding Title}" Height="170" Width="250"         
-        beh:DialogCloser.DialogResult="{Binding DialogResult}"        
+        Title="{Binding Title}"
+        Height="170"
+        Width="250"
+        beh:DialogCloser.DialogResult="{Binding DialogResult}"
         beh:FocusBehavior.FocusFirst="True"
-        ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="ToolWindow"  >
+        ShowInTaskbar="False"
+        ResizeMode="NoResize"
+        WindowStyle="ToolWindow">
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        
+
         <StackPanel Margin="10,10,0,0">
             <StackPanel.Resources>
-                <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
-                <Style TargetType="Label" BasedOn="{StaticResource label90}" />
+                <Style TargetType="DockPanel"
+                       BasedOn="{StaticResource formLine}" />
+                <Style TargetType="Label"
+                       BasedOn="{StaticResource label90}" />
             </StackPanel.Resources>
             <DockPanel>
                 <Label Content="_Дата"
                        Target="{Binding ElementName=date}" />
-                <DatePicker x:Name="date" Text="{Binding Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                <DatePicker x:Name="date"
+                            Text="{Binding Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
             </DockPanel>
             <DockPanel>
-                <Label Content="_Время" 
+                <Label Content="_Время"
                        Target="{Binding ElementName=time}" />
-                <ex:TimePicker x:Name="time" Value="{Binding Time, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"  />
+                <ex:TimePicker x:Name="time"
+                               Value="{Binding Time, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
             </DockPanel>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Style="{StaticResource DialogButtonsPanel}">
-            <Button Name="saveButton" IsDefault="True" Command="{Binding OkCommand}">Сохранить</Button>
-            <Button Name="cancelButton" IsCancel="True" Command="{Binding CancelCommand}">Отмена</Button>
+        <StackPanel Grid.Row="1"
+                    Style="{StaticResource DialogButtonsPanel}">
+            <Button Name="saveButton"
+                    IsDefault="True"
+                    Command="{Binding OkCommand}">Сохранить</Button>
+            <Button Name="cancelButton"
+                    IsCancel="True"
+                    Command="{Binding CancelCommand}">Отмена</Button>
         </StackPanel>
     </Grid>
 </Window>
