--- a/Diagnosis.App/Windows/DebugWindow.xaml
+++ b/Diagnosis.App/Windows/DebugWindow.xaml
@@ -1,17 +1,21 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.DebugWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStartupLocation="Manual" ShowInTaskbar="False" ShowActivated="False" Topmost="True"
-        Title="Debug" Width="450">
+        WindowStartupLocation="Manual"
+        ShowInTaskbar="False"
+        ShowActivated="False"
+        Topmost="True"
+        Title="Debug"
+        Width="450">
     <Grid>
-        <TextBox ScrollViewer.VerticalScrollBarVisibility="Auto" 
+        <TextBox ScrollViewer.VerticalScrollBarVisibility="Auto"
                  x:Name="Log"
-                 Grid.Row="1" 
+                 Grid.Row="1"
                  IsReadOnly="True"
-                 AcceptsReturn="True" 
+                 AcceptsReturn="True"
                  TextChanged="Log_TextChanged"
                  Height="Auto"
-                 Margin="0,10,0,0" 
+                 Margin="0,10,0,0"
                  VerticalContentAlignment="Stretch" />
     </Grid>
 </Window>
