--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -4,29 +4,34 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="30" d:DesignWidth="600">
+             d:DesignHeight="30"
+             d:DesignWidth="600">
     <!-- MenuBarVM -->
     <Grid Background="{StaticResource mainMenuBackgroundBrush}">
         <Menu>
-            <MenuItem Command="{Binding OpenPatientsCommand}" Header="_Все пациенты" />
+            <MenuItem Command="{Binding OpenPatientsCommand}"
+                      Header="_Все пациенты" />
             <!--<MenuItem Header="_Пациенты">
                 <MenuItem Command="{Binding AddPatientCommand}" Header="_Новый..." />
             </MenuItem>-->
             <!--<MenuItem Header="_Справочники">-->
-                <MenuItem Command="{Binding OpenWordsCommand}" Header="_Слова" />
+            <MenuItem Command="{Binding OpenWordsCommand}"
+                      Header="_Слова" />
             <!--</MenuItem>-->
             <!--<MenuItem Header="_Вид">
                 <MenuItem IsCheckable="true" IsChecked="{Binding SearchAside.Opened}" Header="_Поиск" />
             </MenuItem>-->
-            
         </Menu>
 
         <Menu HorizontalAlignment="Right">
             <MenuItem Header="{Binding CurrentUser, Converter={StaticResource ManToShortName}}">
-                <MenuItem Header="_Настройки..." Command="{Binding OpenSettingsCommand}" />
-                <MenuItem Header="_Выйти" Command="{Binding LogoutCommand}" />
+                <MenuItem Header="_Настройки..."
+                          Command="{Binding OpenSettingsCommand}" />
+                <MenuItem Header="_Выйти"
+                          Command="{Binding LogoutCommand}" />
             </MenuItem>
-            <MenuItem Header="_Помощь" Click="MenuItem_Click">
+            <MenuItem Header="_Помощь"
+                      Click="MenuItem_Click">
             </MenuItem>
         </Menu>
     </Grid>
